--- a/configs/RCNN/Base-RCNN.yaml
+++ b/configs/RCNN/Base-RCNN.yaml
@@ -30,11 +30,11 @@ MODEL:
     NUM_CONV: 4
     POOLER_RESOLUTION: 14
 DATASETS:
-  TRAIN: ("coco_2017_train",)
-  TEST: ("coco_2017_val",)
+  TRAIN: ("cloud_map_train",)
+  TEST: ("cloud_map_val",)
 SOLVER:
-  IMS_PER_BATCH: 16
-  BASE_LR: 0.02
+  IMS_PER_BATCH: 2
+  BASE_LR: 0.001
   STEPS: (60000, 80000)
   MAX_ITER: 90000
 INPUT:
