--- a/configs/SOLOv2/Base-SOLOv2.yaml
+++ b/configs/SOLOv2/Base-SOLOv2.yaml
@@ -8,15 +8,15 @@ MODEL:
   FPN:
     IN_FEATURES: ["res2", "res3", "res4", "res5"]
 DATASETS:
-  TRAIN: ("coco_2017_train",)
-  TEST: ("coco_2017_val",)
+  TRAIN: ("cloud_map_train",)
+  TEST: ("cloud_map_val",)
 SOLVER:
-  IMS_PER_BATCH: 16
-  BASE_LR: 0.01
+  IMS_PER_BATCH: 3
+  BASE_LR: 0.0012
   WARMUP_FACTOR: 0.01
   WARMUP_ITERS: 1000
   STEPS: (60000, 80000)
-  MAX_ITER: 90000
+  MAX_ITER: 200000
 INPUT:
   MIN_SIZE_TRAIN: (640, 672, 704, 736, 768, 800)
   MASK_FORMAT: "bitmask"
