--- a/configs/SOLOv2/R101_3x.yaml
+++ b/configs/SOLOv2/R101_3x.yaml
@@ -4,5 +4,6 @@ MODEL:
   RESNETS:
     DEPTH: 101
 SOLVER:
-  STEPS: (210000, 250000)
-  MAX_ITER: 270000
+  STEPS: (15000, 30000)
+  MAX_ITER: 22000
+OUTPUT_DIR: "output/SOLOv2/r101_3x_20000"
